Bug 140676 - Fix unused-private-field warning in IconEfl.cpp
Summary: Fix unused-private-field warning in IconEfl.cpp
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Csaba Osztrogonác
URL:
Keywords:
Depends on:
Blocks: 145121
  Show dependency treegraph
 
Reported: 2015-01-20 07:20 PST by Csaba Osztrogonác
Modified: 2015-05-18 02:43 PDT (History)
3 users (show)

See Also:


Attachments
Patch (1.57 KB, patch)
2015-01-20 07:22 PST, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2015-01-20 07:20:33 PST
In file included from ../../Source/WebCore/platform/graphics/efl/IconEfl.cpp:35:
../../Source/WebCore/platform/graphics/Icon.h:79:18: warning: private field 'm_icon' is not used [-Wunused-private-field]
    Evas_Object* m_icon;
                 ^
1 warning generated.
Comment 1 Csaba Osztrogonác 2015-01-20 07:22:23 PST
Created attachment 244989 [details]
Patch
Comment 2 WebKit Commit Bot 2015-01-20 09:25:11 PST
Comment on attachment 244989 [details]
Patch

Clearing flags on attachment: 244989

Committed r178718: <http://trac.webkit.org/changeset/178718>
Comment 3 WebKit Commit Bot 2015-01-20 09:25:14 PST
All reviewed patches have been landed.  Closing bug.