Fix unused-private-field warning in IconEfl.cpp https://bugs.webkit.org/show_bug.cgi?id=140676

Reviewed by Darin Adler.

* platform/graphics/Icon.h:
* platform/graphics/efl/IconEfl.cpp:
(WebCore::Icon::Icon): Deleted.


Canonical link: https://commits.webkit.org/158647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178718 268f45cc-cd09-0410-ab3c-d52691b4dbfc