Source/WebCore/platform/graphics/efl/IconEfl.cpp
@@ -43,7 +43,6 @@
 namespace WebCore {
 
 Icon::Icon()
-    : m_icon(0)
 {
     notImplemented();
 }
